# section-routing-led-summarization

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
_autopilot/: project_plan.json  readme_last_message.txt
artifacts/: report.md  results.json
configs/: experiment.yaml  smoke.yaml
outputs/ablation_no_routing_section_tokens_shared_lora/: train_metrics.json  valid_metrics.json
outputs/ablation_no_routing_section_tokens_shared_lora/eval/: predictions.jsonl  results.json
outputs/baseline_shared_lora_no_section_tokens/: train_metrics.json  valid_metrics.json
outputs/baseline_shared_lora_no_section_tokens/eval/: predictions.jsonl  results.json
outputs/main_routed_lora_section_tokens_aux_loss/: train_metrics.json  valid_metrics.json
outputs/main_routed_lora_section_tokens_aux_loss/eval/: predictions.jsonl  results.json
scripts/: install_torch.sh
src/section_routing_led_summarization.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/srls/: checkpoint.py  config.py  eval.py  report.py  train.py
src/srls/data/: prepare.py  roles.py  verify.py
src/srls/models/: build.py  led_wrapper.py  routed_lora.py  routing_state.py
src/srls/utils/: hashing.py  repro.py
